refactoring project structure: move code to kafka-client subproject